--- a/src/styles/projetfinal.css
+++ b/src/styles/projetfinal.css
@@ -1,3 +1,7 @@
+body {
+    font-family: sans-serif;
+  }
+
 #chart-wrapper {
     display: flex;
     justify-content: center;
